--- a/app/www/index.html
+++ b/app/www/index.html
@@ -13,15 +13,12 @@
     <!-- cordova script (this will be a 404 during development) -->
     <script src="cordova.js"></script>
     <!-- your app's js -->
-    <script src="js/ngopenfb.js"></script>
-    <script src="js/openfb.js"></script>
     <script src="js/app.js"></script>
     <script src="js/controllers.js"></script>
     <script src="js/factories.js"></script>
     <script src="../plugins/com.phonegap.plugins.facebookconnect/facebookConnectPlugin.js"></script>
-    <script src="modules/alpha/alpha.js"></script>
 </head>
-<body ng-app="Gunt">
+<body ng-app="Mess">
     <ion-nav-view></ion-nav-view>
 </body>
 </html>
